RESOLVED FIXED305575
REGRESSION(305422@main): crashing in JITWorklist::removeDeadPlans
https://bugs.webkit.org/show_bug.cgi?id=305575
Summary REGRESSION(305422@main): crashing in JITWorklist::removeDeadPlans
WebKit Commit Bot
Reported 2026-01-15 09:43:46 PST
https://commits.webkit.org/305422@main introduced a regression: crashing in JITWorklist::removeDeadPlans This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 305422@main (7.95 KB, patch)
2026-01-15 09:43 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2026-01-15 09:43:51 PST
Created attachment 478034 [details] REVERT of 305422@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2026-01-15 09:52:03 PST
Committed 305650@main (3eeeda5c2831): <https://commits.webkit.org/305650@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478034 [details].
Radar WebKit Bug Importer
Comment 3 2026-01-15 09:53:13 PST
Note You need to log in before you can comment on or make changes to this bug.