Cherry-pick 3eeeda5c2831. rdar://168365088

Unreviewed, reverting 305422@main.
    https://bugs.webkit.org/show_bug.cgi?id=305575

    crashing in JITWorklist::removeDeadPlans

    Reverted changeset:

    "Replace RefPtr with Ref in Vector in JSC"

    https://bugs.webkit.org/show_bug.cgi?id=305271
    https://commits.webkit.org/305422@main
    Canonical link: https://commits.webkit.org/305650@main

Identifier: 305413.44@safari-7624-branch